tests/syntax_tests/data/parsing/errors/structure/external.res
// missing JS value name
external setTimeout: (unit => unit, int) => float =
